--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <title>Pldev</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="logos/logo_pldev.svg">
+  <script src="https://kit.fontawesome.com/255d9fcc9c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
+
